improvement AssertUtil.java